# TutorialPlaylist

./: CMakeLists.txt  main.cpp
Database/: data.txt  testData.txt  watchListData.txt  webpage.html
GoogleTest/TestModel/: TestTutorial.cpp
Header/Controller/: AdminController.h  UserController.h
Header/Exception/: CustomException.h  Test.h  TutorialValidator.h
Header/Model/: Repository.h  Repository.tpp  StlRepository.tpp  Storage.cpp  Storage.h  TemplateRepository.h  Tutorial.h
Header/View/: AdminUi.h  UserUi.h
Source/Controller/: AdminController.cpp  UserController.cpp
Source/Exception/: Test.cpp
Source/Model/: InMemoryRepository.cpp  Tutorial.cpp
Source/View/: AdminUi.cpp  UserUi.cpp
